ipp-platform-legacy/scripts/gitops/gitea/gitea-init-job.yaml
---
# Namespaces needed by IIP service and bot secret
apiVersion: v1
kind: Namespace
metadata:
  name: ipp-system
